# media_pusher

./: .gitignore  CMakeLists.txt  README.md  media_finder.h  media_finder_monitor.cpp  media_finder_monitor.h  media_finder_onvif.cpp  media_finder_onvif.h  media_pusher_mgr.cpp  media_pusher_mgr.h  media_pusher_single.cpp  media_pusher_single.h
capture/: camera_capture.cpp  camera_capture.h  common.h
demo/: CMakeLists.txt  demo_media_finder_monitor.cpp  demo_media_finder_onvif.cpp  demo_media_pusher_single.cpp
